added playbook and built container

--- a/index.html
+++ b/index.html
@@ -22,9 +22,24 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <a class="twitter-timeline" height="100%" href="https://twitter.com/search?q=%23heroku" data-widget-id="322505733369368576">Tweets about "#heroku"</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+        <article class="container">
+            <header>
+                <h1>Today, I learned</h1>
+            </header>
+            <section class="tweet-stream">
+                <a class="twitter-timeline" height="100%" href="https://twitter.com/search?q=%23heroku" data-widget-id="322505733369368576">Tweets about "#heroku"</a>
+            </section>
+            <section class="playbook">
+                <h1>thoughtbot Playbook</h1>
+                <img src="http://learn.thoughtbot.com/assets/product_images/book/playbook-cover-large.png">
 
+                <p>Continue learning after the webinar with the founder's handbook for building successful web and mobile applications. <a href="http://thoughtbot.com">View now <span>Free forever</span></a></p>
+            </section>
+        </article>
+
+
+
+        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
