--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <!-- Add your site or application content here -->
         <article class="container">
             <header>
-                <h1>Today, I learned</h1>
+                <h1>Agile Development with Heroku Webinar</h1>
             </header>
             <section class="tweet-stream">
                 <a class="twitter-timeline" height="100%" href="https://twitter.com/search?q=%23heroku" data-widget-id="322505733369368576">Tweets about "#heroku"</a>
@@ -33,7 +33,7 @@
                 <h1>thoughtbot Playbook</h1>
                 <img src="http://learn.thoughtbot.com/assets/product_images/book/playbook-cover-large.png">
 
-                <p>Continue learning after the webinar with the founder's handbook for building successful web and mobile applications. <a href="http://thoughtbot.com">View now <span>Free forever</span></a></p>
+                <p>Continue learning after the webinar with the founder's handbook for building successful web and mobile applications. <a href="http://thoughtbot.com">Read the Playbook <span>View online for free</span></a></p>
             </section>
         </article>
 
