--- a/public/index.html
+++ b/public/index.html
@@ -1,57 +1,51 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width">
+<!--[if lt IE 7]>      <html class='no-js lt-ie9 lt-ie8 lt-ie7'> <![endif]-->
+<!--[if IE 7]>         <html class='no-js lt-ie9 lt-ie8'> <![endif]-->
+<!--[if IE 8]>         <html class='no-js lt-ie9'> <![endif]-->
+<!--[if gt IE 8]><!--> <html class='no-js'> <!--<![endif]-->
+  <head>
+    <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'>
+    <title>Agile Development with Heroku</title>
+    <meta name='description' content=''>
+    <meta name='viewport' content='width=device-width'>
+    <link rel='stylesheet' href='css/normalize.css'>
+    <link rel='stylesheet' href='css/main.css'>
+    <script src='js/vendor/modernizr-2.6.2.min.js'></script>
+  </head>
+  <body>
+    <!--[if lt IE 7]>
+        <p class='chromeframe'>You are using an <strong>outdated</strong> browser. Please <a href='http://browsehappy.com/'>upgrade your browser</a> or <a href='http://www.google.com/chromeframe/?redirect=true'>activate Google Chrome Frame</a> to improve your experience.</p>
+    <![endif]-->
 
-        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+    <article class='container'>
+      <header>
+        <h1>Agile Development with Heroku</h1>
+      </header>
+      <section class='tweet-stream'>
+        <a class='twitter-timeline' height='100%' href='https://twitter.com/search?q=%23heroku' data-widget-id='322505733369368576'>Tweets about '#heroku'</a>
+      </section>
+      <section class='playbook'>
+        <h1>Learn More</h1>
 
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
-        <script src="js/vendor/modernizr-2.6.2.min.js"></script>
-    </head>
-    <body>
-        <!--[if lt IE 7]>
-            <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
-        <![endif]-->
+        <a href='http://playbook.thoughtbot.com'>
+          <img src='img/playbook-cover.png'>
+        </a>
 
-        <!-- Add your site or application content here -->
-        <article class="container">
-            <header>
-                <h1>Agile Development with Heroku Webinar</h1>
-            </header>
-            <section class="tweet-stream">
-                <a class="twitter-timeline" height="100%" href="https://twitter.com/search?q=%23heroku" data-widget-id="322505733369368576">Tweets about "#heroku"</a>
-            </section>
-            <section class="playbook">
-                <h1>thoughtbot Playbook</h1>
-                <img src="http://learn.thoughtbot.com/assets/product_images/book/playbook-cover-large.png">
+        <p>
+          Learn more by reading thoughtbot's playbook for building web and mobile applications.
+          <a href='http://playbook.thoughtbot.com'>Read the playbook</a>.
+        </p>
+      </section>
+    </article>
 
-                <p>Continue learning after the webinar with the founder's handbook for building successful web and mobile applications. <a href="http://thoughtbot.com">Read the Playbook <span>View online for free</span></a></p>
-            </section>
-        </article>
+    <script>
+      !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','twitter-wjs');
+    </script>
 
-
-
-        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
-
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
-            (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-            g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
-            s.parentNode.insertBefore(g,s)}(document,'script'));
-        </script>
-    </body>
+    <script src='//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js'></script>
+    <script>window.jQuery || document.write('<script src='js/vendor/jquery-1.9.1.min.js'><\/script>')</script>
+    <script src='js/plugins.js'></script>
+    <script src='js/main.js'></script>
+  </body>
 </html>
