Add Google Remarketing tag
https://trello.com/c/TJZSp7nL

--- a/public/index.html
+++ b/public/index.html
@@ -56,5 +56,22 @@
       ga('create', 'UA-1485842-22', 'thoughtbot.com');
       ga('send', 'pageview');
     </script>
+
+    <script type="text/javascript">
+      /* <![CDATA[ */
+      var google_conversion_id = 983769411;
+      var google_conversion_label = "87jyCN3HzgMQw8KM1QM";
+      var google_custom_params = window.google_tag_params;
+      var google_remarketing_only = true;
+      /* ]]> */
+    </script>
+
+    <script type="text/javascript" src="//www.googleadservices.com/pagead/conversion.js"></script>
+
+    <noscript>
+      <div style="display:inline;">
+        <img height="1" width="1" style="border-style:none;" alt="" src="//googleads.g.doubleclick.net/pagead/viewthroughconversion/983769411/?value=0&amp;label=87jyCN3HzgMQw8KM1QM&amp;guid=ON&amp;script=0"/>
+      </div>
+    </noscript>
   </body>
 </html>
