--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,17 @@
       </section>
     </article>
 
+    <article class='footer clearfix'>
+      <p>
+        See the <a
+          href='https://trello.com/board/webinar/5164866cbdd2ab8424000414'>Trello
+          board</a>, <a href='https://github.com/thoughtbot/webinar'>GitHub
+          repo</a>, and <a
+          href='https://thoughtbot.campfirenow.com/a615b'>Campfire room</a> for
+        this site.
+      </p>
+    </article>
+
     <script>
       !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','twitter-wjs');
     </script>
