Change title from Agile to Lean
https://trello.com/c/GjsZde1j

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'>
-    <title>Agile Development with Heroku</title>
+    <title>Lean Development with Heroku</title>
     <meta name='description' content=''>
     <meta name='viewport' content='width=device-width'>
     <link rel='stylesheet' href='css/normalize.css'>
@@ -20,7 +20,7 @@
 
     <article class='container'>
       <header>
-        <h1>Agile Development with Heroku</h1>
+        <h1>Lean Development with Heroku</h1>
       </header>
       <section class='tweet-stream'>
         <a class='twitter-timeline' height='100%' href='https://twitter.com/search?q=%23heroku' data-widget-id='322505733369368576'>Tweets about '#heroku'</a>
