Remove Campfire link
https://trello.com/c/p7O1MbsU

--- a/public/index.html
+++ b/public/index.html
@@ -41,12 +41,11 @@
 
     <article class='footer clearfix'>
       <p>
-        See the <a
-          href='https://trello.com/board/webinar/5164866cbdd2ab8424000414'>Trello
-          board</a>, <a href='https://github.com/thoughtbot/webinar'>GitHub
-          repo</a>, and <a
-          href='https://thoughtbot.campfirenow.com/a615b'>Campfire room</a> for
-        this site.
+        Also see the public <a
+        href='https://trello.com/board/webinar/5164866cbdd2ab8424000414'>Trello
+        board</a> and open source <a
+        href='https://github.com/thoughtbot/webinar'>GitHub repo</a> for this
+        site.
       </p>
     </article>
 
