--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <title>Agile Development with Heroku</title>
     <meta name='description' content=''>
     <meta name='viewport' content='width=device-width'>
+    <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
     <link rel='stylesheet' href='css/normalize.css'>
     <link rel='stylesheet' href='css/main.css'>
     <script src='js/vendor/modernizr-2.6.2.min.js'></script>
