Add thoughtbot/guides to footer
https://trello.com/c/VvuArJGh

--- a/public/index.html
+++ b/public/index.html
@@ -42,11 +42,11 @@
 
     <article class='footer clearfix'>
       <p>
-        Also see the public <a
+        Also see <a
+        href='http://github.com/thoughtbot/guides'>thoughtbot/guides</a> &amp; the <a
         href='https://trello.com/board/webinar/5164866cbdd2ab8424000414'>Trello
-        board</a> and open source <a
-        href='https://github.com/thoughtbot/webinar'>GitHub repo</a> for this
-        site.
+        board</a> &amp; <a href='https://github.com/thoughtbot/webinar'>GitHub
+        repo</a> for this site.
       </p>
     </article>
 
