Change footer link
https://trello.com/c/W5uRIZRH

--- a/public/index.html
+++ b/public/index.html
@@ -42,11 +42,14 @@
 
     <article class='footer clearfix'>
       <p>
-        Also see <a
-        href='http://github.com/thoughtbot/guides'>thoughtbot/guides</a> &amp; the <a
+        Also see the <a
         href='https://trello.com/board/webinar/5164866cbdd2ab8424000414'>Trello
         board</a> &amp; <a href='https://github.com/thoughtbot/webinar'>GitHub
         repo</a> for this site.
+      </p>
+      <p>
+        <a href='http://thoughtbot.com/contact'>Contact thoughtbot</a> if you'd
+        like help designing, developing, and deploying a web or mobile app.
       </p>
     </article>
 
