Update copy text
https://trello.com/c/nwZHxiqK

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'>
-    <title>Agile Development with Heroku</title>
+    <title>Technical Overview of Web Apps for MBAs</title>
     <meta name='description' content=''>
     <meta name='viewport' content='width=device-width'>
     <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
@@ -21,10 +21,10 @@
 
     <article class='container'>
       <header>
-        <h1>Agile Development with Heroku</h1>
+        <h1>Technical Overview of Web Apps for MBAs</h1>
       </header>
       <section class='tweet-stream'>
-        <a class='twitter-timeline' height='100%' href='https://twitter.com/search?q=%23heroku' data-widget-id='322505733369368576'>Tweets about '#heroku'</a>
+        <a class='twitter-timeline' height='100%' href='https://twitter.com/search?q=%23thoughtbot' data-widget-id='337201885847109632'>Tweets about 'thoughtbot'</a>
       </section>
       <section class='playbook'>
         <h1>Learn More</h1>
@@ -35,7 +35,7 @@
 
         <p>
           Learn more by reading thoughtbot's playbook for building web and mobile applications.
-          <a href='http://playbook.thoughtbot.com'>Read the playbook</a>.
+          <a href='http://playbook.thoughtbot.com'>Read the playbook</a>
         </p>
       </section>
     </article>
