Change title to Stanford
https://trello.com/c/fGoh5JAM

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'>
-    <title>Technical Overview of Web Apps for MBAs</title>
+    <title>Stanford</title>
     <meta name='description' content=''>
     <meta name='viewport' content='width=device-width'>
     <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
@@ -21,7 +21,7 @@
 
     <article class='container'>
       <header>
-        <h1>Technical Overview of Web Apps for MBAs</h1>
+        <h1>Stanford</h1>
       </header>
       <section class='tweet-stream'>
         <a class='twitter-timeline' height='100%' href='https://twitter.com/search?q=%23thoughtbot' data-widget-id='337201885847109632'>Tweets about 'thoughtbot'</a>
